src/test/ui/error-codes/E0394.stderr
error[E0394]: cannot refer to other statics by value, use the address-of operator or a constant instead
  --> $DIR/E0394.rs:14:17
   |
LL | static B: u32 = A;
   |                 ^ referring to another static by value
   |
   = note: use the address-of operator or a constant instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0394`.
